--- a/Lab2/src/app/navbar/navbar.component.html
+++ b/Lab2/src/app/navbar/navbar.component.html
@@ -1,24 +1,20 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Logo</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+  <a class="navbar-brand" href="#">Bienvenidos</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isCollapsed = !isCollapsed"
-  data-target="#navbarsExampleDefault"
-  aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
+    data-target="#navbarsExampleDefault"
+    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault" [ngbCollapse]="isCollapsed">
-  <ul class="navbar-nav mr-auto">
-  <li class="nav-item">
-  <a class="nav-link" routerLink="">Home
-  <span class="sr-only">(current)</span>
-  </a>
-  </li>
-  <li class="nav-item">
-  <a class="nav-link" routerLink="registration">Registration</a>
-  </li>
-  </ul>
-  <form class="form-inline my-2 my-lg-0">
-  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="">Inicio
+            <span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="registration">Menu y Creacion</a>
+      </li>
+    </ul>
   </div>
-  </nav>
+</nav>
