--- a/Lab2/src/styles.css
+++ b/Lab2/src/styles.css
@@ -1,6 +1,6 @@
 @import "src/styles/bootstrap/dist/css/bootstrap.min.css";
 body {
-  background-color: aqua;
-  padding-top: 80px;
+  background-color: yellow;
+  padding-top: 160px;
 }
 
