--- a/Lab2/src/app/home/home.component.html
+++ b/Lab2/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="template">
-    <h1>Bienvenido al Menu de Hamburguesas</h1>
+    <h1 align= "center">Bienvenido al Control de Usuarios</h1>
   </div>
 </div>
