Informacion en Tabla

--- a/Lab2/src/app/registration/registration.component.html
+++ b/Lab2/src/app/registration/registration.component.html
@@ -8,7 +8,7 @@
           <th>Apellido</th>
           <th>Fecha de Nacimiento</th>
           <th>Usuario</th>
-          <th>Facultad</th>
+          <th>Pais</th>
           <th></th>
           <th></th>
         </tr>
