--- a/Lab2/src/app/registration/registration.component.html
+++ b/Lab2/src/app/registration/registration.component.html
@@ -3,7 +3,7 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>#</th>
+          <th>No.</th>
           <th>Nombre</th>
           <th>Apellido</th>
           <th>Fecha de Nacimiento</th>
@@ -31,7 +31,7 @@
       </tbody>
     </table>
     <div class="text-right">
-      <button type="submit" class="btn btn-primary" (click)="onNew()">Ingresar Nuevo Alumno</button>
+      <button type="submit" class="btn btn-primary" (click)="onNew()">Ingresar Nuevo Usuario</button>
     </div>
   </div>
   <br>
